File upload database

--- a/views/subjects/_form_fields.ejs
+++ b/views/subjects/_form_fields.ejs
@@ -20,6 +20,6 @@
 
 <div>
     <label for="subImg">Subject Cover Image</label>
-    <input type="file" name="subImg" id="subImg" required>
+    <input type="file" name="subImg" id="subImg" class="filepond" required>
     
 </div>
