--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Filepond CDN (CSS and Script)-->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/filepond/4.28.2/filepond.css' integrity='sha512-8Qc4YZy6b3H7ZkZtpPmnthXpYak+idK9X59WkzmNY97Z8R9Ni1seAyDed6vjipyNH8Q3c3S0V42yqg8p7CKweg==' crossorigin='anonymous'/>
+    <link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"/>
+    <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
+    <script defer src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
+    <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
+    <script defer src='https://cdnjs.cloudflare.com/ajax/libs/filepond/4.28.2/filepond.js' integrity='sha512-2E9ULFzJM59LsuiATdwc82jVn65WRgmQWxFh3xLSZLAcSZwGiC09HjyZKJLBVUT4MuNFG1ax0MQqFKwXc2waBA==' crossorigin='anonymous'></script>
+    
+    <!-- My Script -->
+    <script defer src="../../public/javascripts/fileUpload.js"></script>
     <title>School</title>
 </head>
 <body>
