--- a/views/subjects/new.ejs
+++ b/views/subjects/new.ejs
@@ -1,5 +1,5 @@
 <h2>New Subject</h2>
-<form action="/subjects" method="POST" enctype="multipart/form-data">
+<form action="/subjects" method="POST">
 
     <%- include('_form_fields') %> 
 
